--- a/Desafios/desafio 12/style.css
+++ b/Desafios/desafio 12/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
     font-family: 'Sriracha';
     src: url('fontes/Sriracha-Regular.ttf') format(truetype);
@@ -22,29 +23,30 @@
     padding: 0px;
 
 }
-body{   
+body{  
+    min-height: 100vh; 
 }
 
-#links{
-    font-family: var(--font-links);
+header{
+    background-color: var(--cor-header);
     color: white;
-    background-color: black;
     text-align: center;
-    font-size: 1em;
 }
-
-h1{
+header > h1{
     font-family: var(--font-titulo);
-    font-size: calc(1em + 3vw);
-    color: white;
-    background-color: black;
-    text-align: center;
-}
+    padding-top: 50px;
+    font-variant: small-caps;
+    font-size: 10vw;
 
+}
+header > p{
+    padding-bottom: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
 a{
     text-decoration: none;
     color: white;
-    font-weight: bold;
+    font-weight: bolder;
 }
 a:hover{
     text-decoration: underline;
@@ -55,19 +57,33 @@ main{
     min-width: 500px;
     padding: 0px;
 }
-p{
-    font-family: var(--font-padrão);
-    font-size: clamp(2em, 1em + 3vw, 10vw);
-    line-height: 2em;
-    padding: 20px;
 
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+    font-family: var(--font-padrão);
+    font-size: 3.5vw;
 }
-.conteudo{
-    width: 450px;
-    margin: 0px;
-    padding: 20px;
+
+section.normal{
     background-color: white;
+    color: black;
 }
+
+section.imagem{
+    background-color: rgb(53, 53, 53);
+    color: white;
+}
+
+section.imagem > p{
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.315);
+}
+
+
 
 
 #caixa1{
@@ -97,10 +113,7 @@ p{
 
 footer{
     background-color: black;
-    height: 20px;
-}
-footer > p{
     color: white;
-    padding: 0px;
-    
+    text-align: center;
+    padding: 10PX;
 }
